config/istio-canary.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-gateway
  labels:
    app: istio-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: istio-vs
  labels:
    app: istio-vs
spec:
  hosts:
    - "*"
  gateways:
    - istio-gateway
  http:
    - name: canary
      route:
        - destination:
            host: nginx-prod.default.svc.cluster.local
          weight: 80
        - destination:
            host: nginx-canary.default.svc.cluster.local
          weight: 20
